style: Fixed misalignment with text selection and higlight hover over links

--- a/src/sass/Resume.scss
+++ b/src/sass/Resume.scss
@@ -2,10 +2,6 @@
   overflow: scroll;
 }
 
-.pdf {
-  padding: 5px;
-}
-
 #download-btn {
   bottom: 0;
   right: 0;
@@ -17,6 +13,25 @@
 .resume-container a {
   padding: 0;
 }
+
+.react-pdf__Page__canvas {
+  border-radius: 5px;
+}
+
+//this will fix the misalignment when selecting text on pdf
+
+.react-pdf__Page__textContent span {
+	opacity: 0.1;
+}
+
+.react-pdf__Page__textContent span::selection {
+	background-color: blue;
+}
+
+.react-pdf__Document {
+	line-height: initial;
+}
+
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .resume-container::-webkit-scrollbar {
